--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width:100%;
   height:100vh;
   position:relative;
+  overflow:hidden;
 }
 .magnet{
   background:#FFF;
@@ -23,6 +24,7 @@
   cursor:move;
   display:none;
   z-index:9999;
+  box-shadow:0px 0px 3px 0px rgba(0,0,0,.25);
 }
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
@@ -32,13 +34,6 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
-}
-.floaty{
-  //width:80%;
-  //position:absolute;
-  //top:10%;
-  //left:10%;
-  //z-index:10;
 }
 .pad-top{
   padding:40px;
