--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #fridge{
   background:#CCC;
-  width:100%;
-  height:100vh;
+  width:150vw;
+  height:150vh;
   position:relative;
-  overflow:hidden;
+  overscroll-behavior: contain;
 }
 body{
   overscroll-behavior: none;
