--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #fridge{
   background:#CCC;
-  width:100%;
-  height:100vh;
+  width:3000px;
+  height:3000px;
   position:relative;
   overflow:hidden;
   overscroll-behavior: contain;
