--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,14 @@
   height:2000px;
   position:relative;
   overflow:hidden;
-  overscroll-behavior: contain;
 }
-html,
 body {
-    overscroll-behavior-y: contain;
+    overflow:hidden;
+}
+#root{
+  width:100vw;
+  height:100vh;
+  overflow:scroll;
 }
 .magnet{
   background:#FFF;
@@ -18,7 +21,6 @@ body {
   border:1px solid #CCC;
   transition:.3s ease all;
   cursor:move;
-  overscroll-behavior: contain;
 }
 .magnet-placeholder{
   background:#FFF;
@@ -56,7 +58,13 @@ body {
   top:0;
   left:0;
 }
-
+.pop-button{
+  width:100px;
+  height:100px;
+  background:#EEE;
+  border:1px solid #DDD;
+  position:fixed;
+}
 
 
 .loading{
