--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
   position:relative;
   overflow:hidden;
 }
-
+html,body{
+  overscroll-behavior: none;
+}
 ::-webkit-scrollbar { 
   
 }
@@ -58,15 +60,15 @@
 .pop-button{
   position:fixed;
   z-index:1000;
-  top:10px;
+  bottom:10px;
   right:10px;
 }
 .pop-button-icon:hover {
-  box-shadow:0px 0px 0px 2px rgb(31, 210, 255);
+  border-color:#888;
   opacity:1;
 }
 .pop-button.open .pop-button-icon{
-  border-color:#888;
+  box-shadow:0px 0px 0px 2px rgb(31, 210, 255);
   opacity:1;
 }
 .pop-button.open .pop-button-action{
@@ -96,7 +98,6 @@
   top:-3px;
 }
 .pop-button-action{
-  padding-top:10px;
   display:none;
   position:relative;
 }
@@ -105,15 +106,17 @@
   width:300px;
   position:absolute;
   right:0px;
+  top:-320px;
   background:#FFF;
   border:1px solid #888;
   border-radius:8px;
 }
-.chat-panel{
+.chat-messages{
+  overscroll-behavior: none;
   border:1px solid #ced4da;
   margin-bottom:5px;
   border-radius:5px;
-  height:250px;
+  height:200px;
   overflow-y:scroll;
 }
 .chat-message{
@@ -126,8 +129,11 @@
 .chat-user{
   font-weight:bold;
 }
+#chat-text{
+  font-size:16px;
+}
 .pop-button-panel:after, .pop-button-panel:before {
-	bottom: 100%;
+	top:100%;
 	right: 15px;
 	border: solid transparent;
 	content: " ";
@@ -138,12 +144,12 @@
 }
 .pop-button-panel:after {
 	border-color: rgba(255, 255, 255, 0);
-	border-bottom-color: #ffffff;
+	border-top-color: #ffffff;
 	border-width: 10px;
 }
 .pop-button-panel:before {
 	border-color: rgba(0, 0, 0, 0);
-	border-bottom-color: #888;
+	border-top-color: #888;
   border-width: 11px;
   margin-right:-1px
 }
