--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,16 @@ html,body{
   top:0;
   left:0;
 }
-.pop-button{
+.pop-panel{
   position:fixed;
-  z-index:1000;
+  width:100vw;
   bottom:10px;
   right:10px;
+  z-index:1000;
+
+}
+.pop-button{
+  float:right;
 }
 .pop-button-icon:hover {
   border-color:#888;
