--- a/src/App.scss
+++ b/src/App.scss
@@ -1,21 +1,30 @@
+body{
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  &.android{
+    #fridge-wrapper{
+      overflow:auto;
+      scroll-behavior: smooth;
+    }
+  }
+}
 #fridge-wrapper{
   position:relative;
-  
 }
 #fridge{
   background:#CCC;
   position:relative;
   overflow:hidden;
-}
-html,body{
-
-}
-body.android{
-  
-}
-body.android #fridge-wrapper{
-  overflow:auto;
-  scroll-behavior: smooth;
+  &.dragging{
+    .pop-button, .magnet{
+      transition:none;
+      pointer-events: none;
+    }
+    .magnet-placeholder{
+      display:block;
+    }
+  }
 }
 .magnet{
   background:#FFF;
@@ -48,9 +57,11 @@ body.android #fridge-wrapper{
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-.card-header h4{
-  margin:0;
-  padding:5px 0;
+.card-header{
+  h4{
+    margin:0;
+    padding:5px 0;
+  }
 }
 .color-swatch{
   width:20px;
@@ -61,20 +72,9 @@ body.android #fridge-wrapper{
 .pad-top{
   padding:40px;
 }
-#fridge.dragging .pop-button,
-#fridge.dragging .magnet{
-  transition:none;
-  pointer-events: none;
-}
-#fridge.dragging .magnet-placeholder{
-  display:block;
-}
-.chat{
-  z-index:10;
-  position:absolute;
-  top:0;
-  left:0;
-}
+/* -------------------------------- */
+/* POP PANEL 
+/* -------------------------------- */
 .pop-panel{
   transition:.2s ease opacity;
   position:fixed;
@@ -96,16 +96,16 @@ body.android #fridge-wrapper{
 .pop-panel.active .pop-button{
   pointer-events: all;
 }
-.pop-button-icon:hover {
-  border-color:#888;
-  opacity:1;
-}
-.pop-button.open .pop-button-icon{
-  box-shadow:0px 0px 0px 2px rgb(31, 210, 255);
-  opacity:1;
-}
-.pop-button.open .pop-button-action{
-  display:block;
+.pop-button{
+  &.open{
+    .pop-button-icon{
+      box-shadow:0px 0px 0px 2px rgb(31, 210, 255);
+      opacity:1;
+    }
+    .pop-button-action{
+      display:block;
+    }
+  }
 }
 .pop-button-icon{
   position:relative;
@@ -120,16 +120,20 @@ body.android #fridge-wrapper{
   text-align:center;
   opacity:.8;
   border-radius:50px;
-}
-.pop-button-icon i{
-  color:#888;
-  font-size:30px;
-  line-height:47px;
-}
-.pop-button-icon .badge{
-  position:absolute;
-  left:-3px;
-  top:-3px;
+  &:hover{
+    border-color:#888;
+    opacity:1;
+  }
+  i{
+    color:#888;
+    font-size:30px;
+    line-height:47px;
+  }
+  .badge{
+    position:absolute;
+    left:-3px;
+    top:-3px;
+  }
 }
 .pop-button-action{
   display:none;
@@ -144,27 +148,6 @@ body.android #fridge-wrapper{
   background:#FFF;
   border:1px solid #888;
   border-radius:8px;
-}
-.chat-messages{
-  overscroll-behavior: none;
-  border:1px solid #ced4da;
-  margin-bottom:5px;
-  border-radius:5px;
-  height:200px;
-  overflow-y:scroll;
-}
-.chat-message{
-  padding:2px 5px;
-  border-bottom:1px solid #EEE;
-}
-.chat-message:last-child{
-  border:none;
-}
-.chat-user{
-  font-weight:bold;
-}
-#chat-text{
-  font-size:16px;
 }
 .pop-button-panel:after, .pop-button-panel:before {
 	top:100%;
@@ -187,7 +170,39 @@ body.android #fridge-wrapper{
   border-width: 11px;
   margin-right:-1px
 }
-
+/* -------------------------------- */
+/* CHAT
+/* -------------------------------- */
+.chat{
+  z-index:10;
+  position:absolute;
+  top:0;
+  left:0;
+}
+.chat-messages{
+  overscroll-behavior: none;
+  border:1px solid #ced4da;
+  margin-bottom:5px;
+  border-radius:5px;
+  height:200px;
+  overflow-y:scroll;
+}
+.chat-message{
+  padding:2px 5px;
+  border-bottom:1px solid #EEE;
+}
+.chat-message:last-child{
+  border:none;
+}
+.chat-user{
+  font-weight:bold;
+}
+#chat-text{
+  font-size:16px;
+}
+/* -------------------------------- */
+/* Loading
+/* -------------------------------- */
 .loading{
   display: flex;
   align-items: center;
@@ -233,22 +248,18 @@ body.android #fridge-wrapper{
 .titlecase{
   text-transform: capitalize;
 }
-/* Switches */
-
-/* The switch - the box around the slider */
+/* -------------------------------- */
+/* Switch
+/* -------------------------------- */
 .switch {
   position: relative;
-  display: inline-block;
+  display: block;
   width: 60px;
   height: 34px;
-  float:right;
+  float: right;
   margin-bottom:0;
+  input {display:none;}
 }
-
-/* Hide default HTML checkbox */
-.switch input {display:none;}
-
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -256,11 +267,10 @@ body.android #fridge-wrapper{
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #777;
   -webkit-transition: .4s;
   transition: .4s;
 }
-
 .slider:before {
   position: absolute;
   content: "";
@@ -272,7 +282,6 @@ body.android #fridge-wrapper{
   -webkit-transition: .4s;
   transition: .4s;
 }
-
 input.default:checked + .slider {
   background-color: #444;
 }
@@ -291,22 +300,17 @@ input.warning:checked + .slider {
 input.danger:checked + .slider {
   background-color: #f44336;
 }
-
 input:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }
-
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
-
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
-
 .slider.round:before {
   border-radius: 50%;
 }
