--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
-body{
+html{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+}
+body{
+  background:transparent;
   &.is-dragging{
     .pop-button, .magnet{
       transition:none;
